Fix horizontal scrollbar on biography tab

--- a/css/ambersteel.css
+++ b/css/ambersteel.css
@@ -831,4 +831,5 @@ a.button-spinner {
 textarea.biography {
   height: 100%;
   resize: none;
+  overflow-x: hidden;
 }
