--- a/scss/components/_biography.scss
+++ b/scss/components/_biography.scss
@@ -1,4 +1,5 @@
 textarea.biography {
     height: 100%;
     resize: none;
+    overflow-x: hidden;
 }
